# propai-sync

./: .detect-secrets.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENTS.md  BUILD_LOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hosted  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  HANDOFF.md  README.md  SECURITY.md  VISION.md  appcast.xml  docker-compose.yml  docker-setup.sh  docs.acp.md  elevenlabs.js  fly.private.toml  fly.toml  knip.config.ts  openclaw.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  propai.mjs  propai.podman.env  railway.toml  render.yaml  setup-podman.sh  tsconfig.json  (+4 more)
.agents/: maintainers.md
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/installer/: wix-close-app.wxs  wix-template.wxs
apps/tauri/src-tauri/src/: gateway.rs  gateway_ipc.rs  lib.rs  main.rs
docs/: CNAME  brave-search.md  ci.md  date-time.md  docs.json  hosted-platform.md  index.md  logging.md  network.md  perplexity.md  pi-dev.md  pi.md  prose.md  tts.md  vps.md
scripts/: auth-monitor.sh  bench-cli-startup.ts  build-and-run-mac.sh  build_icon.sh  bundle-a2ui.sh  canvas-a2ui-copy.ts  changelog-to-html.sh  check-no-monolithic-plugin-sdk-entry-imports.ts  check-no-random-messaging-tmp.mjs  check-plugin-sdk-exports.mjs  ci-changed-scope.mjs  claude-auth-status.sh  clawlog.sh  codesign-mac-app.sh  copy-export-html-templates.ts  copy-hook-metadata.ts  create-dmg.sh  debug-claude-usage.ts  deploy-website.ps1  generate-host-env-security-policy-swift.mjs  ghsa-patch.mjs  install.ps1  install.sh  ios-asc-keychain-setup.sh  ios-beta-prepare.sh  ios-configure-signing.sh  ios-team-id.sh  ios-write-version-xcconfig.sh  label-open-issues.ts  make_appcast.sh  mobile-reauth.sh  notarize-mac-artifact.sh  package-mac-app.sh  package-mac-dist.sh  pr  propai-npm-release-check.ts  protect-main.ps1  protocol-gen-swift.ts  protocol-gen.ts  recover-orphaned-processes.sh  (+31 more)
src/: docker-build-cache.test.ts  docker-setup.e2e.test.ts  dockerfile.test.ts  (+11 more)
(+4113 files in other folders)
