[package]
name = "propai-desktop"
version = "2026.3.11"
description = "PropAi Sync Desktop (Tauri wrapper)"
authors = ["PropAi Sync Contributors"]
edition = "2021"

[lib]
name = "propai_desktop"
path = "src/lib.rs"

[[bin]]
name = "propai-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-updater = { version = "2" }
thiserror = "2.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
zip = "0.6.6"
